--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,27 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('bg.png');
-    background-size: cover;
+    background-image: url('url_da_imagem_do_gui');
+    background-size: cover; /* Ajuda a cobrir toda a área sem distorcer */
     background-position: center;
+    height: 100vh; /* Ajusta o tamanho para cobrir a altura da tela */
     padding: 20px;
+    margin: 0;
+}
+
+@media (max-width: 600px) {
+    body {
+        background-size: cover;
+    }
+}
+
+canvas {
+    border: 5px solid #333;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    margin-top: 20px;
 }
 
 
@@ -30,10 +47,7 @@ li {
     color: green;
 }
 
-canvas {
-    border: 5px solid #333;
-    margin-top: 20px;
-}
+
 
 #mensagem {
     margin-top: 20px;
@@ -73,13 +87,3 @@ canvas {
     font-size: 24px;
 }
 
-@media (max-width: 600px) {
-    body {
-        background-size: contain;
-    }
-
-    canvas {
-        width: 300px;
-        height: 300px;
-    }
-}
